packages/components/src/css/component/Table.module.scss
@use '~flux/components/css/mixin';

.table {
    composes: basePaneElement from './base/Pane.module.scss';

    position: relative;
    display: flex;
    container: table / inline-size;
    flex-flow: column;
    overflow: auto;

    :is(caption) {
        color: var(--foreground-secondary);
        font-size: 14px;
        text-align: left;
    }
}

.tableBase {
    min-width: 100cqw;
    bottom: 0;
    border-collapse: separate;
    border-spacing: 0;
    text-align: left;

    &:has(.tableFill) {
        flex-grow: 1;
    }

    &:has(.tableFill):has(.tablePagination) {
        margin-bottom: -1px;
    }
}

.tableLoader {
    composes: basePaneLoader from './base/Pane.module.scss';
}

.tableRow {
    height: 0;
    margin: 0;
    padding: 0;

    &.isClickable {
        cursor: pointer;

        @include mixin.focus-ring(-2px);
    }
}

.tableCellBase {
    height: 0;
    padding: 0;
    border: 0 solid var(--gray-100);

    @-moz-document url-prefix() {
        height: 100%;
    }
}

.tableCell {
    composes: tableCellBase;
}

.tableCellContent {
    display: flex;
    height: 100%;
    padding: 12px 15px;
    align-items: flex-start;

    :global(p):only-child {
        margin: 0;
    }
}

.tableHeadSticky {
    position: sticky;
    top: 0;
    z-index: 2;
}

.tableHeader {
    composes: tableCell;

    border-bottom: 2px solid var(--gray-100);
    color: var(--foreground-prominent);

    &.isShrinking {
        width: 0;
        white-space: nowrap;
    }
}

.tableHeadSticky .tableHeader {
    background: var(--gray-50);
}

.tableHeaderContent {
    composes: tableCellContent;

    align-items: center;
    font-size: 14px;
}

tbody .tableRow.isSelected .tableCell {
    background: var(--primary-50);
    border-color: var(--primary-100);
}

tbody .tableRow.isSelected + .tableRow .tableCell {
    border-top-color: var(--primary-100);
}

@media (hover: hover) {
    tbody .tableRow:hover .tableCell.isHoverable,
    tbody .tableRow:has(:focus-visible) .tableCell.isHoverable {
        background: var(--gray-50);
    }

    tbody .tableRow.isSelected:hover .tableCell.isHoverable,
    tbody .tableRow.isSelected:has(:focus-visible) .tableCell.isHoverable {
        background: var(--primary-50);
    }
}

tfoot .tableCell {
    border-top: 1px solid var(--gray-100);
}

.tableCell + .tableCell {
    border-left-width: 1px;
}

tbody .tableRow + .tableRow .tableCell {
    border-top-width: 1px;
}

tbody .tableGroupRow + .tableRow .tableCell {
    border-top-width: 0;
}

tbody .tableGroupRow:first-child .tableGroup {
    border-top-width: 0;
}

tbody .tableGroupRow:last-child .tableGroup,
tbody .tableGroupRow:has(+ .tableFill) .tableGroup {
    border-bottom-width: 0;
}

.tableActions {
    margin: -4px 0 -4px -3px;
}

.tableCellSelection {
    width: 0;
}

.tableCell.isNoWrap {
    white-space: nowrap;
}

.tableCell.isNumeric {
    font-variant-numeric: tabular-nums;
}

.tableCell.isPinnedStart,
.tableCell.isPinnedEnd {
    position: sticky;
    background: var(--surface);
    transition: box-shadow .2s var(--swift-out);
    z-index: 1;
}

.tableCell.isPinnedStart {
    left: 0;
}

.tableCell.isPinnedEnd {
    right: 0;
}

.tableHeader.isPinnedStart,
.tableHeader.isPinnedEnd {
    z-index: 3;
}

.tableHeadSticky .tableHeader.isPinnedStart,
.tableHeadSticky .tableHeader.isPinnedEnd {
    background: var(--gray-50);
}

.table.isScrolledStart .tableCell.isPinnedStart:not(:has(+ .tableCell.isPinnedStart)) {
    box-shadow: 1px 0 0 var(--surface-stroke-out), 6px 0 10px -6px rgb(from var(--gray-800) r g b / 0.15);
}

.table.isScrollableEnd .tableCell:not(.isPinnedEnd) + .tableCell.isPinnedEnd {
    border-left-color: var(--surface-stroke-out);
    box-shadow: -6px 0 10px -6px rgb(from var(--gray-800) r g b / 0.15);
}

.tableFill {
    pointer-events: none;

    .tableCell {
        height: 100%;
    }

    .tableCellContent {
        padding: 0;
    }
}

.tableBase:has(.tableEmptyFill) {
    flex-grow: 1;
}

.tableEmptyFill .tableCellBase {
    height: 100%;
    vertical-align: middle;
}

.tableBar {
    --bg: var(--surface);

    composes: tableCell;

    position: relative;
    background: var(--bg);
    box-shadow: 0 0 18px var(--bg),
                0 0 18px var(--bg),
                0 0 18px var(--bg),
                0 0 18px var(--bg),
                0 0 18px var(--bg),
                0 0 18px var(--bg);
    z-index: 2;
}

.tableHeadSticky .tableBar {
    --bg: var(--gray-50);
}

.tableBarContent {
    composes: tableCellContent;

    position: sticky;
    left: 0;
    max-width: 100cqw;
    flex-flow: row nowrap;
    gap: 15px;
}

.tableGroup {
    composes: tableCell;

    border-bottom-width: 1px;
}

.tableGroupContent {
    composes: tableBarContent;

    align-items: center;
    gap: 12px;
    background: color-mix(in srgb, var(--surface), var(--gray-50));

    &:is(button) {
        width: 100%;
        border: 0;
        color: inherit;
        font: inherit;
        text-align: left;
        cursor: pointer;
        transition: background var(--transition-default);
        transition-property: background, mixin.focus-ring-transition-properties();

        @include mixin.focus-ring(-2px);

        @include mixin.hover {
            background: var(--gray-50);
        }
    }
}

.tableGroupChevron {
    color: var(--foreground-secondary);
    transition: rotate .2s var(--swift-out);
}

.tableGroupChevron.isExpanded {
    rotate: 90deg;
}

.tableGroupIcon {
    color: var(--foreground);
}

.tableGroupLabel {
    flex-grow: 1;
    color: var(--foreground-prominent);
    font-size: 14px;
    font-weight: 600;
}

.tableGroupAfter {
    display: flex;
    align-items: center;
    gap: 9px;
}

.tablePagination {
    position: sticky;
    left: 0;
    bottom: 0;
    margin-top: auto;
    margin-bottom: -1px;
    background: var(--surface);
    border-top: 1px solid var(--gray-100);
    translate: 0 -1px;
    z-index: 100;
}

.tableSort {
    display: flex;
    height: 24px;
    width: 24px;
    margin: -3px -6px -3px 6px;
    padding: 0;
    align-items: center;
    justify-content: center;
    background: unset;
    border: 0;
    border-radius: var(--radius-half);
    color: var(--foreground-secondary);
    cursor: pointer;
    outline: 0;

    @include mixin.hover {
        background: var(--gray-100);
        color: var(--foreground);
    }
}

.basePaneStructure:has(.table) {
    --table-spacing: 18px;
}

.basePaneStructure .basePaneStructure {
    --table-spacing: 15px;
}

.basePaneStructure > .table .tableCell:first-child .tableCellContent {
    padding-left: var(--table-spacing);
}

.basePaneStructure > .table .tableCell:last-child .tableCellContent {
    padding-right: var(--table-spacing);
}

.basePaneStructure > .table .tableActions {
    margin-right: -3px;
}

.basePaneStructure > .table :is(caption) {
    padding: 12px var(--table-spacing);
    border-top: 1px solid var(--gray-100);
}

.basePaneStructure > .table .tableLoader {
    border-radius: var(--radius);
}

.tableCellExpand {
    width: 0;
}

.tableExpandToggle :global(svg) {
    transition: rotate .2s var(--swift-out);
}

.tableExpandToggle.isExpanded :global(svg) {
    rotate: 90deg;
}

.tableExpandContent {
    padding: 12px 15px;
}

.tableEmpty {
    display: flex;
    padding: 45px 15px;
    align-items: center;
    justify-content: center;
    color: var(--foreground-secondary);
    text-align: center;
}

